# heo-test

./: .env.example  .gitignore  RALPH_WIGGUM_PROMPT.md  README.md  catalog.yaml  test-plugin-full.sh
.claude/: project-standards.yaml  project-standards.yaml.template  settings.json
.claude-plugin/: marketplace.json  plugin.json
agents/: architect.md  build-error-resolver.md  code-reviewer.md  context-agent.md  context-monitor.md  doc-updater.md  e2e-runner.md  git-orchestrator.md  librarian.md  planner.md  qa-agent.md  refactor-cleaner.md  security-reviewer.md  sentinel.md  tdd-guide.md
commands/: arch-debate.md  boundary-critique.md  branch.md  bug-swarm.md  bug.md  build-fix.md  build-prompt.md  build-ralph-prompt.md  catalog.md  checkpoint.md  ci.md  code-review.md  coderabbit-conflicts.md  coderabbit-process.md  coderabbit-status.md  coderabbit.md  coderabbitloop.md  collect-signals.md  common-patterns.md  context-payload.md  context.md  (+26 more)
testing/pretend-project/scaffold/: project-standards.yaml  pyproject.toml
testing/pretend-project/scaffold/docs/: architecture.md
testing/pretend-project/scaffold/migrations/: README
testing/pretend-project/scaffold/src/taskhive/: __init__.py  app.py  config.py
testing/pretend-project/scaffold/src/taskhive/models/: __init__.py  user.py
testing/pretend-project/scaffold/src/taskhive/routes/: __init__.py  health.py
testing/pretend-project/scaffold/src/taskhive/services/: __init__.py
testing/pretend-project/scaffold/src/taskhive/utils/: __init__.py
testing/pretend-project/scaffold/tests/: conftest.py  test_health.py
(+349 files in other folders)
